@@ -20,10 +20,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
-}
-
-test {
-
+    jvmArgs('-Dnet.bytebuddy.experimental=true')
     testLogging {
         events "passed", "skipped", "failed"
     }
